# Wshot

./: .editorconfig  CMakeLists.txt  README.md  wshot  wshot.desktop  wshot.desktop.in  wshot.sh
translations/: de.po  es.po  fi.po  fr.po  it.po  nl.po  tr.po  wshot.pot
